Fix topbar alignment, fix line height, move font preload to partial

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -22,7 +22,7 @@ $root-font-family: "InterVariable", system-ui, sans-serif;
 
 $root-font-size: 1rem;
 $root-font-weight: 400;
-$root-line-height: 1.6em;
+$root-line-height: 1.5;
 
 $large-font-size: 1.1rem;
 $small-device-font-size: $root-font-size;
